--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 
-
+<link rel="stylesheet" href="styles.css">
 <div class="overlay"></div>
 <div class="stars" aria-hidden="true"></div>
 <div class="starts2" aria-hidden="true"></div>
